insert new config and layout

--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
@@ -1,6 +1,6 @@
-{% extends '::base.html.twig' %}
+{% extends 'Juanber84ScheduleBundle::layout.html.twig' %}
 
-{% block body -%}
+{% block body %}
 <a href="{{ path('fos_user_security_logout') }}">logout</a>
     <h1>Jobs list</h1>
 
