insert layouts in views

--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/new.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/new.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %}
+{% extends 'Juanber84ScheduleBundle::layout.html.twig' %}
 
 {% block body -%}
     <h1>Jobs creation</h1>
