--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
@@ -1,20 +1,20 @@
 {% extends 'Juanber84ScheduleBundle::layout.html.twig' %}
 
-{% block body %}
+{% block body -%}
 <a href="{{ path('fos_user_security_logout') }}">logout</a>
     <h1>Jobs list</h1>
 
     <table class="records_list">
         <thead>
             <tr>
-                <td><input type="checkbox"></td>                <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.id') }} </th>                <th>{{ knp_pagination_sortable(pagination, 'Initdatetime', 'a.initdatetime') }} </th>                <th>{{ knp_pagination_sortable(pagination, 'Enddatetime', 'a.enddatetime') }} </th>                <th>{{ knp_pagination_sortable(pagination, 'Observations', 'a.observations') }} </th>
+                            <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.id') }} </th>                <th>{{ knp_pagination_sortable(pagination, 'Initdatetime', 'a.initdatetime') }} </th>                <th>{{ knp_pagination_sortable(pagination, 'Enddatetime', 'a.enddatetime') }} </th>                <th>{{ knp_pagination_sortable(pagination, 'Observations', 'a.observations') }} </th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
         {% for entity in pagination %}
             <tr>
-                <td><input type="checkbox"></td>
+                
                 <td><a href="{{ path('schedule_jobs_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{% if entity.initdatetime %}{{ entity.initdatetime|date('Y-m-d H:i:s') }}{% endif %}</td>
                 <td>{% if entity.enddatetime %}{{ entity.enddatetime|date('Y-m-d H:i:s') }}{% endif %}</td>
