--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
@@ -1,9 +1,7 @@
 {% extends 'Juanber84ScheduleBundle::layout.html.twig' %}
 
 {% block body -%}
-<a href="{{ path('fos_user_security_logout') }}">logout</a>
-    <h1>Jobs list</h1>
-
+    <h4 class="text book inline"><span class="icon star color theme "></span> Jobs list</h4>
     <table class="records_list">
         <thead>
             <tr>
