--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layout.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layout.html.twig
@@ -1,10 +1,129 @@
-<html>
-	<head>
-		{% stylesheets 'bundles/juanber84schedule/css/*' filter='cssrewrite' %}
-	    	<link rel="stylesheet" href="{{ asset_url }}" />
-		{% endstylesheets %}
-	</head>
-	<body>
-		{% block body %}{% endblock %}
-	</body>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>tuktuk - Application Example</title>
+    <!-- Mobile Specific Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+	{% stylesheets 'bundles/juanber84schedule/css/*' filter='cssrewrite' %}
+    	<link rel="stylesheet" href="{{ asset_url }}" />
+	{% endstylesheets %}
+    <style>
+        aside > header .logo {
+            margin-top: 10px;
+            max-height: 30px; }
+
+        aside footer img {
+          height: 16px;
+          position: relative;
+          top: 5px;
+          left: 2px; }
+
+        .thumb {
+            height: 96px;
+            margin-bottom: 2.5em;
+            text-align: center;
+            line-height: 96px;
+        }
+        .column_4.thumb {
+            height: 220px;
+            line-height: 220px;
+        }
+    </style>
+</head>
+<body data-tuktuk="boxes">
+
+    <aside class="column_3">
+        <header class="bck theme text center ">
+
+        </header>
+        <article class="bck dark scroll">
+            <nav data-tuktuk="menu" class="text bold">
+        	{% set menu = app.request.attributes.get('_route') %}
+			{% if menu == 'schedule_jobs' or menu == 'schedule_jobs_new' or menu == 'schedule_jobs_edit' %}
+                <a href="{{path('schedule_jobs')}}" class="active"><span class="icon user"></span>Jobs</a>
+			{% else %}
+                <a href="{{path('schedule_jobs')}}" ><span class="icon user"></span>Jobs</a>
+			{% endif %}             	
+			{% if menu == 'schedule_proyects' or menu == 'schedule_proyects_new' or menu == 'schedule_proyects_edit' %}
+                <a href="{{path('schedule_proyects')}}" class="active"><span class="icon heart"></span>Proyects</a>
+			{% else %}
+                <a href="{{path('schedule_proyects')}}"><span class="icon heart"></span>Proyects</a>
+			{% endif %}     
+			{% if menu == 'schedule_activitys' or menu == 'schedule_activitys_new' or menu == 'schedule_activitys_edit' %}
+                <a href="{{path('schedule_activitys')}}" class="active"><span class="icon group"></span>Activities</a>
+			{% else %}
+                <a href="{{path('schedule_activitys')}}"><span class="icon group"></span>Activities</a>
+			{% endif %}     
+			{% if menu == 'schedule_user' or menu == 'schedule_user_new' or menu == 'schedule_user_edit' %}
+                <a href="{{path('schedule_user')}}" class="active"><span class="icon star"></span>Users</a>
+			{% else %}
+                <a href="{{path('schedule_user')}}"><span class="icon star"></span>Users</a>
+			{% endif %}     						
+            </nav>
+        </article>
+        <footer class="bck dark text center">
+            Handcrafted by <a href="http://tapquo.com" class="display inline"><img src="http://cdn.tapquo.com/images/logo_footer.png"/></a>
+        </footer>
+    </aside>
+
+		
+
+    <section>
+        <header>
+            <h3 class="on-left text thin">Job's Schedule <span class="tag bck theme">NEW!</span></h3>
+            <nav class="on-right">
+                <a href="{{ path('fos_user_security_logout') }}"><button class="alert">Logout</button></a>
+            </nav>
+        </header>
+
+        <article class="padding scroll">
+            <div class="margin-bottom column_8">
+				{% block body %}{% endblock %}            	
+            </div>
+        </article>
+
+        <footer class="bck light">
+        </footer>
+    </section>
+
+    <div id="modal" data-tuktuk="modal" class="column_5">
+        <header>
+            <h4 class="text book inline">Normal window</h4>
+            <button data-modal="close" class="transparent small on-right inline icon remove"></button>
+        </header>
+        <article>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum assumenda aperiam nobis quam earum nihil veritatis modi possimus blanditiis perferendis obcaecati voluptatibus fuga eaque ad et atque nostrum porro expedita!
+        </article>
+    </div>
+
+    <div id="modal-right" data-tuktuk="modal" class="side column_5">
+        <header>
+            <h4 class="inline text book">Side window.</h4>
+            <button data-modal="close" class="transparent small on-right inline icon remove"></button>
+        </header>
+        <article class="form">
+            <label>example of input</label>
+            <input type="text" value="text" />
+            <input type="text" class="large" value="text" />
+
+            <label>Example of textarea</label>
+            <textarea>textarea</textarea>
+            <textarea class="large">textarea</textarea>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt quos dolorum minus fugiat rem similique velit aperiam est sequi neque nulla tenetur minima autem facilis temporibus quaerat consectetur impedit praesentium.
+        </article>
+        <footer>
+            <button data-modal="close">Save</button>
+        </footer>
+    </div>
+
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	{% javascripts '@Juanber84ScheduleBundle/Resources/public/js/*' %}
+	    <script type="text/javascript" src="{{ asset_url }}"></script>
+	{% endjavascripts %}    
+    <script>
+        TukTuk.Modal.loading();
+        setTimeout( TukTuk.Modal.hide, 1000);
+    </script>
+</body>
 </html>
