--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Proyects/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Proyects/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'Juanber84ScheduleBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Proyects list</h1>
+    <h4 class="text book inline"><span class="icon folder-close color theme "></span> Proyects list</h4>
 
     <table class="records_list">
         <thead>
