--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/User/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/User/index.html.twig
@@ -1,8 +1,7 @@
 {% extends 'Juanber84ScheduleBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>User list</h1>
-
+    <h4 class="text book inline"><span class="icon group color theme "></span> Users list</h4> 
     <table class="records_list">
         <thead>
             <tr>
