--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'Juanber84ScheduleBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h4 class="text book inline"><span class="icon star color theme "></span> Jobs list</h4>
+    <h4 class="text book inline"><span class="icon pencil color theme "></span> Jobs list</h4>
     <table class="records_list">
         <thead>
             <tr>
