--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>tuktuk - Landing Example</title>
+    <title>Schedulejob</title>
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     {% stylesheets 'bundles/juanber84schedule/css/*' filter='cssrewrite' %}
@@ -64,11 +64,7 @@
 
         <div class="row ">
             <div class="column_4 offset_4 text center">
-                <img src="http://cdn.tapquo.com/photos/soyjavi.jpg" class="responsive rounded margin-bottom"/>
-                <a href="https://twitter.com/soyjavi" class="twitter-follow-button " data-show-count="true" data-dnt="true">Follow @soyjavi</a>
-                <script>
-                    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-                </script>
+                <img src="http://juanberzal.com/static/images/avatar.png" height="360" width="360" class="responsive rounded margin-bottom"/>
             </div>
         </div>
     </section>
@@ -76,16 +72,8 @@
     <footer class="bck dark padding">
         <div class="row margin-top margin-bottom">
             <div class="column_5">
-                <p class="text bold big">Handcrafted by <a href="http://tapquo.com" class="display inline"><img src="http://cdn.tapquo.com/images/logo_footer.png"/></a></p>
-                We're a  user experiences company located in <span class="text normal">Bilbao</span>, ES.
-            </div>
-            <div class="column_4">
-                <p class="text bold big">Join the team!</p>
-                Let us know how you're! <a href="mailto:hello@tapquo.com?subject=job" class="text underline color theme">Get in touch</a>
-            </div>
-            <div class="column_3">
-                <p class="text bold big">Need some help?</p>
-                For quick answers or help <a href="https://twitter.com/tapquo" target="_blank" class="text underline color theme">follow us</a>
+                <p class="text bold big"><a target="_blank" href="http://symfony.com/" class="display inline">Symfony2</a> / <a target="_blank" href="http://tuktuk.tapquo.com/" class="display inline">tuktuk</a></p>
+                <p class="text bold big"></p>
             </div>
         </div>
     </footer>
