--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
@@ -58,7 +58,7 @@
         <div class="row margin-bottom">
             <div class="column_10 offset_1 text center">
                 <h1 class="color book theme">Author</h1>
-                <h3 class="text thin">I'm Juan Berzal a Web developer. You can see my website <a href="http://juanberzal.com" class="text normal">juanberzal.com</a>. I'm founder of <a href="http://fourcoders.com" class="text normal">foucoders.com</a>, a little group of developers and friends. You can fork me on <a href="http://github.com/juanber84" class="text normal">Github</a>.</h3>
+                <h3 class="text thin">I'm Juan Berzal a Web developer. You can see my website <a href="http://juanberzal.com" class="text normal">juanberzal.com</a>. I'm founder of <a href="http://fourcoders.com" class="text normal">fourcoders.com</a>, a little group of developers and friends. You can fork me on <a href="http://github.com/juanber84" class="text normal">Github</a>.</h3>
              </div>
          </div>
 
