--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
@@ -37,8 +37,10 @@
     <!-- ========================== HEADER ========================== -->
     <header class="bck margin-top margin-bottom">
         <div class="row">
-
-            <nav class="column_12 text right">
+            <div class="column_6">
+                <h2 class="text italic thin"><a href="{{path('schedule_jobs_indexweb')}}"><strong>Schedule</strong>job</a></h2>
+            </div>
+            <nav class="column_6 text right">
                 <a href="{{ path('fos_user_security_login') }}" class="button secondary"><span class="icon user"></span>Login</a>
                 <a href="/app_dev.php/register" class="button"><span class="icon pencil"></span>Signup</a>
             </nav>
