--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -4,21 +4,22 @@
 
 {% block fos_user_content %}
 
-{% if error %}
-    <div>{{ error|trans }}</div>
-{% endif %}
-<form action="{{ path("fos_user_security_check") }}" method="post">
+<div class="column_9">
+	<div class="column_3 offset_3">
+	{% if error %}
+	    <div><strong style="color:#e74c3c">{{ error|trans }}<strong></div>
+	{% endif %}		
+	<form action="{{ path("fos_user_security_check") }}" method="post">
     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
-    <label for="username">{{ 'security.login.username'|trans }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+    <label for="username">{{ 'Username'|trans }}</label>
+    <input type="text" id="username" name="_username" value="{{ last_username }}"/>
 
-    <label for="password">{{ 'security.login.password'|trans }}</label>
-    <input type="password" id="password" name="_password" required="required" />
+    <label for="password">{{ 'Password'|trans }}</label>
+    <input type="password" id="password" name="_password" />
 
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
-
-    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+    <input type="submit" class="button large alert margin-top" id="_submit" name="_submit" value="Enter" />
+    </div>
 </form>
+</div>
 {% endblock fos_user_content %}
