--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/layoutindex.html.twig
@@ -74,7 +74,7 @@
     <footer class="bck dark padding">
         <div class="row margin-top margin-bottom">
             <div class="column_5">
-                <p class="text bold big"><a target="_blank" href="http://symfony.com/" class="display inline">Symfony2</a> / <a target="_blank" href="http://tuktuk.tapquo.com/" class="display inline">tuktuk</a></p>
+                Powered by <p class="text bold big"><a target="_blank" href="http://symfony.com/" class="display inline">Symfony2</a> & <a target="_blank" href="http://tuktuk.tapquo.com/" class="display inline">tuktuk</a></p>
                 <p class="text bold big"></p>
             </div>
         </div>
