--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Activity/index.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Activity/index.html.twig
@@ -37,7 +37,7 @@
 
         <ul>
         <li>
-            <a href="{{ path('schedule_activitys_new') }}">
+            <a class="button secondary"  href="{{ path('schedule_activitys_new') }}">
                 Create a new entry
             </a>
         </li>
