--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Activity/edit.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Activity/edit.html.twig
@@ -1,19 +1,21 @@
 {% extends 'Juanber84ScheduleBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Activity edit</h1>
+    <h4 class="text book inline"><span class="icon exchange color theme "></span> Activities edit</h4>       
 
     <form action="{{ path('schedule_activitys_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
         <input type="hidden" name="_method" value="PUT" />
         {{ form_widget(edit_form) }}
-        <p>
-            <button type="submit">Edit</button>
-        </p>
+        <br>
+        <ul class="record_actions">
+            <li>
+                <button type="submit">Edit</button>
+            </li>
     </form>
 
-        <ul class="record_actions">
+
     <li>
-        <a href="{{ path('schedule_activitys') }}">
+        <a class="button secondary"  href="{{ path('schedule_activitys') }}">
             Back to the list
         </a>
     </li>
