--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/show.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/show.html.twig
@@ -1,7 +1,8 @@
 {% extends 'Juanber84ScheduleBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Jobs</h1>
+
+    <h4 class="text book inline"><span class="icon pencil color theme "></span> Jobs </h4>    
 
     <table class="record_properties">
         <tbody>
