--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/edit.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/edit.html.twig
@@ -7,14 +7,15 @@
     <form action="{{ path('schedule_jobs_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
         <input type="hidden" name="_method" value="PUT" />
         {{ form_widget(edit_form) }}
-        <p>
+        <ul class="record_actions">
+            <li>
             <button type="submit">Edit</button>
-        </p>
+        </li>
     </form>
 
-        <ul class="record_actions">
+
     <li>
-        <a href="{{ path('schedule_jobs') }}">
+        <a class="button secondary" href="{{ path('schedule_jobs') }}">
             Back to the list
         </a>
     </li>
