--- a/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/show.html.twig
+++ b/src/Juanber84/Bundle/ScheduleBundle/Resources/views/Jobs/show.html.twig
@@ -27,12 +27,12 @@
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('schedule_jobs') }}">
+        <a class="button secondary" href="{{ path('schedule_jobs') }}">
             Back to the list
         </a>
     </li>
     <li>
-        <a href="{{ path('schedule_jobs_edit', { 'id': entity.id }) }}">
+        <a class="button secondary" href="{{ path('schedule_jobs_edit', { 'id': entity.id }) }}">
             Edit
         </a>
     </li>
